--- a/app/components/services/image.hbs
+++ b/app/components/services/image.hbs
@@ -1,4 +1,4 @@
 <button type="button" class="image {{if this.isLarge "large"}}" {{on "click" this.toggleSize}}>
-  <img ...attributes>
+  <div class="img-container"><img ...attributes></div>
 <small>{{if this.isLarge "Collapse" "Expand"}}</small>
 </button>
