--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,9 +1,11 @@
 <Jumbo>
-  <h2>About Downtown Services</h2>
-  <p>
+  <h2 class="text-secondary">About Downtown Services</h2>
+  <p class="lead w-75">
     The Downtown Services website is a delightful project created to explore Ember.
-    By building a property rental site, we can simultaneously imagine traveling
+    By building a site with some of the most recommended services in town, We are able
+    to share with visitors the places we go and eat very often, and that we consider to
+    be a solid, or at least very decent service in town. We can simultaneously imagine traveling
     AND building Ember applications.
   </p>
-  <LinkTo @route="contact" class="button">Contact Us</LinkTo>
+  <LinkTo @route="contact" class="button btn-lg btn btn-success">Contact Us</LinkTo>
 </Jumbo>
