--- a/app/components/map.hbs
+++ b/app/components/map.hbs
@@ -1,8 +1,10 @@
 <div class="map">
   {{!-- <img alt="Map image at coordinates {{@lat}},{{@lng}}" ...attributes
     src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/{{@lng}},{{@lat}},{{@zoom}}/{{@width}}x{{@height}}@2x?access_token={{this.token}}"
-    width={{@width}} height={{@height}}> --}}
+    width={{@width}} height={{@height}} /> --}}
 
-<div style="width: 100%"><iframe width={{@width}} height={{@height}} frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
-src="https://maps.google.com/maps?width={{@width}}&amp;height={{@height}}&amp;hl={{@lng}}&amp;q={{@lat}},{{@lng}}+(DownTown%20Services)&amp;t=&amp;z={{@zoom}}&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
+  <div style="width: 100%"><iframe width={{@width}} height={{@height}} frameborder="0" scrolling="no" marginheight="0"
+      marginwidth="0"
+      src="https://maps.google.com/maps?width={{@width}}&amp;height={{@height}}&amp;hl={{@lng}}&amp;q={{@lat}},{{@lng}}+(DownTown%20Services)&amp;t=&amp;z={{@zoom}}&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+  </div>
 </div>
