--- a/app/components/nav-bar.hbs
+++ b/app/components/nav-bar.hbs
@@ -1,13 +1,25 @@
-<nav class="menu">
-  <LinkTo @route="index" class="menu-index">
-    <h1>Downtown Services</h1>
-  </LinkTo>
-  <div class="links">
-    <LinkTo @route="about" class="menu-about">
-      About
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <LinkTo @route="index" class="navbar-brand">
+      Downtown Services
     </LinkTo>
-    <LinkTo @route="contact" class="menu-contact">
-      Contact
-    </LinkTo>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <LinkTo @route="about" class="nav-link active" aria-current="page">
+            About
+          </LinkTo>
+        </li>
+        <li class="nav-item">
+          <LinkTo @route="contact" class="nav-link" aria-current="page">
+            Contact
+          </LinkTo>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
