--- a/app/components/services/detailed.hbs
+++ b/app/components/services/detailed.hbs
@@ -1,9 +1,10 @@
 <Jumbo>
   <h2>{{@service.title}}</h2>
   <p>Nice find! This looks like a nice place to stay near {{@service.city}}.</p>
-  <a href="#" target="_blank" rel="external nofollow noopener noreferrer" class="share button">
+  <ShareButton @text="Check out {{@rental.title}} on Super Rentals!"
+    @hashtags="vacation,travel,authentic,blessed,superrentals" @via="emberjs">
     Share on Twitter
-  </a>
+  </ShareButton>
 </Jumbo>
 
 <article class="rental detailed">
