--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
-{{page-title "DowntownServices"}}
-<div class="container">
+{{page-title "Downtown Services"}}
+<div class="container bg-dark">
   <NavBar />
-  <div class="body">
+  <div class="container-fluid bg-light">
     {{outlet}}
   </div>
 </div>
