--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,6 +1,6 @@
 <Jumbo>
-  <h2>Contact Us</h2>
-  <p>
+  <h2 class="text-secondary">Contact Us</h2>
+  <p class="lead w-75">
     Downtown Services Representatives would love to help you<br>
     choose a destination or answer any questions you may have.
   </p>
@@ -8,10 +8,10 @@
     Downtown Services HQ
     <p>
       Residential Praderas de Xilotepelt<br>
-      Casa #G2, Jinotepe, Carazo
+      Casa #G2, Jinotepe, Carazo.
     </p>
-    <a href="tel:505.8863.8751">+1 (505) 8863-8751</a><br>
+    <a href="tel:505.8863.8751">(505) 8863-8751</a><br>
     <a href="mailto:alvison@gmail.com">alvison@gmail.com</a>
   </address>
-  <LinkTo @route="about" class="button">About</LinkTo>
+  <LinkTo @route="about" class="button btn-lg btn btn-success">About</LinkTo>
 </Jumbo>
